gcc/testsuite/gdc.test/compilable/imports/test22685b.d
module imports.test22685b;

import imports.test22685c : overloaded;

void overloaded()() { }
