gcc/testsuite/gdc.test/fail_compilation/imports/issue21295ast_node.d
module imports.issue21295ast_node;
import imports.issue21295visitor : Visitor;
class ASTNode {
    void accept(Visitor);
}
